apps/sonarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    certResolver: letsencrypt-production
